(library (name zarith_stubs_js) (public_name zarith_stubs_js)
 (js_of_ocaml (javascript_files ./biginteger.js ./runtime.js)
  (wasm_files ./runtime_wasm.js ./runtime.wat)
  (flags --no-sourcemap))
 (libraries) (preprocess no_preprocessing))

(env
 (wasm
  (env-vars (TESTING_FRAMEWORK inline-test))
  (js_of_ocaml (target wasm)))
 (_
  (env-vars (TESTING_FRAMEWORK inline-test))))
